additional pip installs

--- a/shorts/daily_jpx_crawler.ipynb
+++ b/shorts/daily_jpx_crawler.ipynb
@@ -55,7 +55,7 @@
     "        excel_data = BytesIO(excel_response.content)\n",
     "        daily_df = pd.read_excel(excel_data, engine='xlrd')\n",
     "\n",
-    "print(f'Finished processing {url}')\n",
+    "print(f'Finished processing {JPX_SHORT_SELLING_URL}')\n",
     "\n",
     "# Snake case mapping between JPX spreadsheet schema for easier queries\n",
     "schema = [\n",
@@ -104,8 +104,9 @@
    "outputs": [],
    "source": [
     "# Download the dataset as a zip file\n",
+    "DIRECTORY = os.path.join(os.getcwd(), 'dataset')\n",
     "os.makedirs(DIRECTORY, exist_ok=True)\n",
-    "os.system(f'kaggle datasets download -d {KAGGLE_USERNAME}/{DATASET_NAME} -p {DIRECTORY} --unzip')\n",
+    "os.system(f'kaggle datasets download -d lilfatdog/metaplanet-daily-short-positions -p {DIRECTORY} --unzip')\n",
     "\n",
     "# Find the CSV file\n",
     "csv_files = [f for f in os.listdir(DIRECTORY) if f.endswith('.csv')]\n",
@@ -140,14 +141,6 @@
     "message = f\"Added new data for {latest_file_name}\"\n",
     "os.system(f'kaggle datasets version -p {DIRECTORY} -m \"{message}\"')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0c610a6-b16b-41a7-9a2a-9f8283da06cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
