--- a/shorts/daily_jpx_crawler.ipynb
+++ b/shorts/daily_jpx_crawler.ipynb
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "# Download the dataset as a zip file\n",
-    "DIRECTORY = os.path.join(os.getcwd(), 'dataset')\n",
+    "DIRECTORY = os.path.join(os.getcwd(), 'shorts/dataset')\n",
     "os.makedirs(DIRECTORY, exist_ok=True)\n",
     "os.system(f'kaggle datasets download -d lilfatdog/metaplanet-daily-short-positions -p {DIRECTORY} --unzip')\n",
     "\n",
@@ -128,7 +128,6 @@
     "merged_df = pd.concat([df, snapshot_df], ignore_index=True)\n",
     "merged_df = merged_df.sort_values(by=date_column, ascending=False)\n",
     "merged_df = merged_df.drop_duplicates()\n",
-    "# print(merged_df)\n",
     "merged_df.to_csv(os.path.join(DIRECTORY, 'metaplanet_daily_short_positions.csv'), index=False)\n",
     "\n",
     "# Move the updated CSV for upload\n",
@@ -137,7 +136,7 @@
     "except Exception as e:\n",
     "    print(f\"Exception: {e}\")\n",
     "\n",
-    "# Use the Kaggle API to create a new version\n",
+    "# Update csv file using Kaggle API\n",
     "message = f\"Added new data for {latest_file_name}\"\n",
     "os.system(f'kaggle datasets version -p {DIRECTORY} -m \"{message}\"')"
    ]
