output mode static chart

--- a/shorts/daily_short_position_chart.ipynb
+++ b/shorts/daily_short_position_chart.ipynb
@@ -132,6 +132,28 @@
     ")\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33b879f0-9367-4bfa-b221-f575f3b2546a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Matplotlib static chart for output mode\n",
+    "colors = plt.get_cmap('tab20').colors\n",
+    "ax = pivot.plot(figsize=(12,6), marker='o', color=colors)\n",
+    "plt.title(f'Short Positions in Shares Over Last {LOOKBACK_WINDOW + 1} Days')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Number of Short Positions in Shares (Millions)')\n",
+    "plt.legend(title='Short Seller', bbox_to_anchor=(1.05, 1), loc='upper left', borderaxespad=0.)\n",
+    "plt.grid(True)\n",
+    "\n",
+    "ax.yaxis.set_major_formatter(mticker.FuncFormatter(lambda x, _: f'{x*1e-6:.0f}M'))\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
