change scheduler earlier + fixed dedupe logic based on date/short_seller

--- a/shorts/daily_jpx_crawler.ipynb
+++ b/shorts/daily_jpx_crawler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "id": "9489ff8e-bb53-40c0-b713-a3a0a92b4de8",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e27c6042-2923-4d01-9af1-d90f55e1561a",
+   "id": "726c9f3b-9a0c-4c08-a92f-6c5e80614061",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99b86b93-2253-49d3-b22d-e98eb9987ce9",
+   "id": "108a81e1-fdb5-44f0-8e2d-f5e09bb05e4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,13 +121,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c48582a-b784-4326-9fcd-0fe967f9b02f",
+   "id": "67a471a2-7b47-4a1f-99ae-73c3bb87427c",
    "metadata": {},
    "outputs": [],
    "source": [
     "merged_df = pd.concat([df, snapshot_df], ignore_index=True)\n",
     "merged_df = merged_df.sort_values(by=date_column, ascending=False)\n",
-    "merged_df = merged_df.drop_duplicates()\n",
+    "merged_df = merged_df.drop_duplicates(subset=['date_of_calculation', 'name_of_short_seller'])\n",
     "merged_df.to_csv(os.path.join(DIRECTORY, 'metaplanet_daily_short_positions.csv'), index=False)\n",
     "\n",
     "# Move the updated CSV for upload\n",
