fix write to local csv

--- a/google_finance_daily_stonk_data/google_finance_api.ipynb
+++ b/google_finance_daily_stonk_data/google_finance_api.ipynb
@@ -138,13 +138,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "717aa949-d79b-4794-84de-9b463b376442",
+   "id": "ba6c70b9-da37-4fcf-aa31-565ee0bf04c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "DIRECTORY = os.path.join(os.getcwd(), 'dataset')\n",
-    "csv_path = os.path.join(DIRECTORY, 'metaplanet_daily_price_and_volume.csv')\n",
-    "df.to_csv(csv_path, index=False)\n",
+    "os.makedirs(DIRECTORY, exist_ok=True)\n",
+    "df.to_csv(os.path.join(DIRECTORY, 'metaplanet_daily_price_and_volume.csv'), index=False)\n",
     "\n",
     "# Move the updated CSV for upload\n",
     "try:\n",
