Working locally fix metadata-dataset.json not found issue again

--- a/google_finance_daily_stonk_data/google_finance_api.ipynb
+++ b/google_finance_daily_stonk_data/google_finance_api.ipynb
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DIRECTORY = os.path.join(os.getcwd(), 'dataset')\n",
+    "DIRECTORY = os.path.join(os.getcwd(), 'google_finance_daily_stonk_data/dataset')\n",
     "os.makedirs(DIRECTORY, exist_ok=True)\n",
     "df.to_csv(os.path.join(DIRECTORY, 'metaplanet_daily_price_and_volume.csv'), index=False)\n",
     "\n",
